# footy-ml

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: pull-request.yaml
src/: config.py
src/builder/: builder.py  dataset.py  models.py  registry.py  validation_scheme.py
src/data/: ingestor.py
