[tool.poetry]
name = "footy-ml"
version = "0.1.0"
description = ""
authors = ["Dennis Hansen"]
readme = "README.md"
packages = [{include = "footy_ml"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
requests = "^2.28.1"
pre-commit = "^2.20.0"
mypy = "^0.991"
pydantic = "^1.10.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-sugar = "^0.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
